tests/errors/preprocessor/016_branch.c.expect
./tests/errors/preprocessor/016_branch.c:1:6: error: #endif without #if
1 | #endif
         ^
